--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
+				<configuration>
+					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+					<!-- more config here as you see fit -->
+				</configuration>
 			</plugin>
 
 		</plugins>
