--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
 				<configuration>
-					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+					<dotGitDirectory>https://github.com/EduardoNunes5/bookstoremanager.git</dotGitDirectory>
 					<!-- more config here as you see fit -->
 				</configuration>
 			</plugin>
