--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
+				<version>4.0.0</version>
 				<configuration>
 					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
 				</configuration>
