--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.exclude=loggers
-
-management.endpoint.shutdown.enabled=true
-
-#config actuator info using properties
-info.app.name = @project.name@
-info.app.groupId = @project.groupId@
-info.app.artifactId = @project.artifactId@
-info.app.version = @project.version@
-
-management.info.git.mode=simple
+spring.profiles.active=prod
