--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ language: java
 sudo: false
 jdk: openjdk15
 install: true
+addons:
+  sonarcloud:
+    organization: $SONAR_ORGANIZATION
+    token: $SONAR_TOKEN
 cache:
   directories:
     - $HOME/.m2
+    - $home/.sonar/cache
+script:
+  - mvn clean package sonar:sonar -P sonar
 before_script:
   - chmod +x mvnw
