--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ logging:
   level:
     br:
       com:
-        eduardonunes5: DEBUG
+        eduardonunes: DEBUG
 spring:
   datasource:
     url: jdbc:h2:mem:bookstore_dev;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
