--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,7 +5,7 @@ logging:
         eduardonunes: DEBUG
 spring:
   datasource:
-    url: jdbc:h2:mem:bookstore_dev;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:bookstore_prod;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -13,7 +13,6 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: false
     properties:
-      hibernate:
       format_sql: false
   h2:
     console:
