--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ cache:
     - $HOME/.m2
     - $home/.sonar/cache
 script:
-  - mvn clean package sonar:sonar -P sonar
+  - mvn clean build sonar:sonar -P sonar
 before_script:
   - chmod +x mvnw
