--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ cache:
     - $HOME/.m2
     - $HOME/.sonar/cache
 script:
-  - mvn clean package sonar:sonar -P sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 before_script:
   - chmod +x mvnw
