--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: java
 sudo: false
 jdk: openjdk15
 install: true
+before_install:
+  - chmod +x mvnw
 addons:
   sonarcloud:
     organization: $SONAR_ORGANIZATION
@@ -13,5 +15,3 @@ cache:
     - $HOME/.sonar/cache
 script:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
-before_script:
-  - chmod +x mvnw
