--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.4.1.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -77,7 +82,7 @@
 
 	<build>
 		<plugins>
-	                <plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
@@ -96,7 +101,7 @@
                             <path>
                             	<groupId>org.mapstruct</groupId>
                                 <artifactId>mapstruct-processor</artifactId>
-                                <version>1.3.1.Final</version>
+                                <version>1.4.1.Final</version>
                             </path>
                         </annotationProcessorPaths>
                     </configuration>
