--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>
@@ -77,26 +81,26 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <configuration>
-                                        <source>${java.version}</source>
-                                        <target>${java.version}</target>
-                                        <annotationProcessorPaths>
-                                                <path>
-                                                        <groupId>org.projectlombok</groupId>
-                                                        <artifactId>lombok</artifactId>
-                                                        <version>${lombok.version}</version>
-                                                </path>
-                                                <path>
-                                                        <groupId>org.mapstruct</groupId>
-                                                        <artifactId>mapstruct-processor</artifactId>
-                                                        <version>1.3.1.Final</version>
-                                               </path>
-                                       </annotationProcessorPaths>
-                               </configuration>
-                        </plugin>
+				<plugin>
+                	<groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                    	<source>${java.version}</source>
+						<target>${java.version}</target>
+                        <annotationProcessorPaths>
+                        	<path>
+                            	<groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                            <path>
+                            	<groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>1.3.1.Final</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
 	        </plugins>
 	</build>
 	<profiles>
