--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ cache:
     - $HOME/.m2
     - $HOME/.sonar/cache
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn sonar:sonar
