--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
 					src/main/java/**/dto/**,
 					src/main/java/**/entity/**,
 					src/main/java/**/repository/**,
-					src/test/java/**/
+					src/test/java/**
 				</sonar.exclusions>
 			</properties>
 			<build>
