--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
                 	<groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                    	<source>${java.version}</source>
-						<target>${java.version}</target>
+                    	<source>14</source>
+						<target>14</target>
                         <annotationProcessorPaths>
                         	<path>
                             	<groupId>org.projectlombok</groupId>
